k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodeapps-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: nodeapp.cloudy
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nodeapp-service
                port:
                  number: 80
    - host: nodeapp2.cloudy
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nodeapp2-service
                port:
                  number: 80
